--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
-    "firebase-admin": "^11.0.0"
+    "firebase-admin": "^11.0.0",
+    "node-schedule": "^2.1.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
+    "@types/node-schedule": "^2.1.0",
     "ts-node": "^10.8.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.7.3"
